# clover

./: .builder.json  .editorconfig  .gitattributes  .gitignore  .gitmodules  .markdownlint.json  .travis.yml  CNAME  Description.md  LICENSE  LICENSE.md  README.md  SUMMARY.md  _config.yml  arduino.html  aruco.html  assemble.html  assemble_clever3_4in1.html  autolaunch.html  book.json  camera.html  camera_frame.html  check_assets_size.py  check_unused_assets.py  cl3_connectESC4in1.html  connection.html  connectortypes.html  copterhack2018.html  firmware.html  flight_logs.html  fpv.html  frames.html  gcs_bridge.html  gen_changelog.py  glossary.html  gps.html  gpsmd.md  index.html  led.html  leds.html  (+25 more)
aruco_pose/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml
aruco_pose/cfg/: Detector.cfg  DetectorParams.cfg  Map.cfg
aruco_pose/launch/: aruco_detector_config.yaml  sample.launch
aruco_pose/map/: cmit.txt  map.txt  nti_novgorod.txt  office.txt  office_ceiling.txt
aruco_pose/msg/: Marker.msg  MarkerArray.msg
aruco_pose/src/: aruco_detect.cpp  aruco_map.cpp  aruco_pose.cpp  compat.cpp  compat.h  draw.cpp  draw.h  fix.cpp  genmap.py  gridboard.h  util.h  utils.h
aruco_pose/srv/: SetMarkers.srv
aruco_pose/test/: basic.py  basic.test  basic.txt  camera_info.yaml  crash_opencv.py  crash_opencv.test  duplicate.py  duplicate.test  largemap.py  largemap.test  largemap.txt  map_parser_fail.test  map_parser_fail_dict.test  map_parser_pass.test  parser.fail.1.txt  parser.fail.2.txt  parser.pass.1.txt  test_node_failure.py  test_node_failure.test  test_node_failure.txt  test_parser_empty_map.py  test_parser_empty_map.test  test_parser_empty_map.txt  test_parser_pass.py  test_parser_pass.test  test_parser_pass.txt
clever/: CMakeLists.txt  nodelet_plugins.xml  package.xml  requirements.txt
clever/camera_info/: fisheye_cam.yaml  fisheye_cam_320.yaml  fisheye_cam_640.yaml
clever/cmake/: FindGeographicLib.cmake
clever/launch/: arduino.launch  aruco.launch  bottom_camera.launch  clever.launch  copter_visualization.launch  fpv_camera.launch  led.launch  main_camera.launch  mavros.launch  mavros_config.yaml  sitl.launch  web_server.launch
clever/src/: aruco_vpe.cpp  aruco_vpe.py  camera_markers.cpp  fcu_horiz.cpp  fpv_camera  frames.cpp  global_local.py  interactive.py  led.cpp  monkey  optical_flow.cpp  rc.cpp  selfcheck.py  simple_offboard.cpp  simple_offboard.py  util.h  util.py  utils.h  vl53l1x.py  vpe_publisher.cpp  web_server.py
clever/srv/: GetTelemetry.srv  Navigate.srv  NavigateGlobal.srv  SetAttitude.srv  SetAttitudeYawRate.srv  SetLEDEffect.srv  SetPosition.srv  SetPositionGlobal.srv  SetPositionGlobalYawRate.srv  SetPositionYawRate.srv  SetRates.srv  SetRatesYaw.srv  SetVelocity.srv  SetVelocityYawRate.srv
clever/static/: index.html
clever/test/: basic.py  basic.test  sitl.py  sitl.test
clever/www/: aruco_map.html  gcs.html  index.html  viz.html
clover/: CHANGELOG.rst  CMakeLists.txt  README.md  nodelet_plugins.xml  package.xml  requirements.in  requirements.txt  setup.py
clover/camera_info/: fisheye_cam.yaml  fisheye_cam_1280x720.yaml  fisheye_cam_1920x1080.yaml  fisheye_cam_2592x1944.yaml  fisheye_cam_320x240.yaml  fisheye_cam_3840x2160.yaml  fisheye_cam_4056x3040.yaml  fisheye_cam_640x480.yaml  fisheye_cam_800x600.yaml  ov7251.yaml
clover/cfg/: Flow.cfg
clover/examples/: camera.py  flight.py  flight_marker.py  get_telemetry.py  gps.py  leds.py  navigate_wait.py  red_circle.py  subscriber.py
clover/launch/: aruco.launch  clover.launch  fpv_camera.launch  led.launch  main_camera.launch  mavros.launch  mavros_config.yaml  simulator.launch  sitl.launch  www.launch
clover/msg/: State.msg
clover/src/: camera_markers.cpp  camera_stream  fpv_camera  led.cpp  optical_flow.cpp  rc.cpp  selfcheck.py  shell.cpp  simple_offboard.cpp  vpe_publisher.cpp  waitfile  www
clover/srv/: Execute.srv  GetTelemetry.srv  Navigate.srv  NavigateGlobal.srv  SetAltitude.srv  SetAttitude.srv  SetPosition.srv  SetRates.srv  SetVelocity.srv  SetYaw.srv  SetYawRate.srv  TakeOff.srv
clover/test/: basic.py  basic.test  offboard.py  offboard.test
clover/tools/: rescale_camera_info.py
clover/udev/: 99-px4fmu.rules
clover/www/: clover.err  clover_version  console.html  docs  index.html  topics.html  viz.html
clover_blocks/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  readme.md
clover_blocks/msg/: Prompt.msg
clover_blocks/src/: clover_blocks  main.py
clover_blocks/srv/: Load.srv  Run.srv  Store.srv
clover_blocks/www/: blocks.js  index.html  main.css  main.js  python.js  ros.js  roslib.js
clover_description/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml
clover_description/launch/: spawn_camera.launch  spawn_drone.launch  spawn_drone_camera.launch  view_drone.launch
clover_description/urdf/: camera_sensor.urdf.xacro  component_snippets.urdf.xacro  constants.urdf.xacro  multirotor_base.xacro  pinhole_camera.urdf.xacro
clover_gazebo_plugins/: CMakeLists.txt  README.md  package.xml
clover_gazebo_plugins/cmake/: 50_sitl_gazebo_setup.sh.in  EnableC++XX.cmake  FindGStreamer.cmake  FindMAVLink.cmake  UnitTests.cmake
clover_gazebo_plugins/include/: common.h  gazebo_barometer_plugin.h  gazebo_controller_interface.h  gazebo_geotagged_images_plugin.h  gazebo_gimbal_controller_plugin.hh  gazebo_gps_plugin.h  gazebo_gst_camera_plugin.h  gazebo_imu_plugin.h  gazebo_irlock_plugin.h  gazebo_lidar_plugin.h  gazebo_magnetometer_plugin.h  gazebo_mavlink_interface.h  gazebo_motor_failure_plugin.h  gazebo_motor_model.h  gazebo_multirotor_base_plugin.h  gazebo_opticalflow_plugin.h  gazebo_sonar_plugin.h  gazebo_uuv_plugin.h  gazebo_video_stream_widget.h  gazebo_vision_plugin.h  gazebo_wind_plugin.h  geo_mag_declination.h  irlock.h
clover_gazebo_plugins/msgs/: CommandMotorSpeed.proto  Imu.proto  Odometry.proto  (+4 more)
clover_simulation/: CHANGELOG.rst  CMakeLists.txt  README.md  package.xml  setup.py
roswww_static/: CHANGELOG.rst  CMakeLists.txt  README.md  bottom.txt  index.txt  main.py  package.xml  script.txt  style.txt  update
(+1381 files in other folders)
