<?xml version="1.0"?>
<package>
  <name>aruco_pose</name>
  <version>0.0.0</version>
  <description>Positioning with ArUco markers</description>

  <maintainer email="okalachev@gmail.com">Oleg Kalachev</maintainer>
  <license>MIT</license>

  <!--url type="website">http://wiki.ros.org/aruco_pose</url-->
  <author email="okalachev@gmail.com">Oleg Kalachev</author>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>tf</build_depend>
  <build_depend>tf2</build_depend>
  <build_depend>tf2_ros</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <build_depend>cv_bridge</build_depend>
  <build_depend>dynamic_reconfigure</build_depend>
  <build_depend>image_transport</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>std_msgs</build_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>image_transport</run_depend>
  <run_depend>cv_bridge</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>std_msgs</run_depend>
  <run_depend>tf</run_depend>
  <run_depend>tf2</run_depend>
  <run_depend>tf2_ros</run_depend>
  <run_depend>tf2_geometry_msgs</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
