<?xml version="1.0"?>
<package format="3">
  <name>aruco_pose</name>
  <version>0.25.0</version>
  <description>Positioning with ArUco markers</description>

  <maintainer email="okalachev@gmail.com">Oleg Kalachev</maintainer>
  <license>MIT</license>

  <!--url type="website">http://wiki.ros.org/aruco_pose</url-->
  <author email="okalachev@gmail.com">Oleg Kalachev</author>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>nodelet</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>cv_bridge</depend>
  <depend>image_transport</depend>
  <depend>message_generation</depend>
  <depend>message_runtime</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>rostest</depend>
  <depend>dynamic_reconfigure</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-docopt</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-docopt</depend>

  <test_depend>image_publisher</test_depend>
  <test_depend>ros_pytest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
