<?xml version="1.0"?>
<package>
  <name>clever</name>
  <version>0.0.1</version>
  <description>The CLEVER package</description>

  <maintainer email="okalachev@gmail.com">Oleg Kalachev</maintainer>
  <license>MIT</license>

  <!--url type="website">http://wiki.ros.org/clever</url-->
  <author email="okalachev@gmail.com">Oleg Kalachev</author>
  <author email="urpylka@gmail.com">Artem Smirnov</author>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>nodelet</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>mavros</run_depend>
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
