<?xml version="1.0"?>
<package>
  <name>clever</name>
  <version>0.0.1</version>
  <description>The CLEVER package</description>

  <maintainer email="okalachev@gmail.com">Oleg Kalachev</maintainer>
  <license>MIT</license>

  <!--url type="website">http://wiki.ros.org/clever</url-->
  <author email="okalachev@gmail.com">Oleg Kalachev</author>
  <author email="urpylka@gmail.com">Artem Smirnov</author>

  <!-- Use build_depend for packages you need at compile time: -->
  <build_depend>nodelet</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>visualization_msgs</build_depend>
  <build_depend>tf2_geometry_msgs</build_depend>
  <!-- Use buildtool_depend for build tool packages: -->
  <buildtool_depend>catkin</buildtool_depend>
  <!-- Use run_depend for packages you need at runtime: -->
  <run_depend>catkin</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>nodelet</run_depend>
  <run_depend>mavros</run_depend>
  <run_depend>mavros_extras</run_depend>
  <run_depend>lxml</run_depend>
  <run_depend>cv_camera</run_depend>
  <run_depend>mjpg-streamer</run_depend>
  <run_depend>rosbridge_server</run_depend>
  <run_depend>web_video_server</run_depend>
  <run_depend>ros_comm</run_depend>r
  <!-- Use test_depend for packages you need only for testing: -->
  <!--   <test_depend>gtest</test_depend> -->

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
