<?xml version="1.0"?>
<package format="3">
  <name>clover</name>
  <version>0.25.0</version>
  <description>The Clover package</description>

  <maintainer email="okalachev@gmail.com">Oleg Kalachev</maintainer>
  <license>MIT</license>

  <url type="website">https://clover.coex.tech/</url>
  <author email="okalachev@gmail.com">Oleg Kalachev</author>
  <author email="urpylka@gmail.com">Artem Smirnov</author>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Package format specifier version 2.0 allows specifying dependencies for both
   build- and runtime in a single <depend> element -->
  <depend>message_generation</depend>
  <depend>roscpp</depend>
  <depend>rospy</depend>
  <depend>std_srvs</depend>
  <depend>tf</depend>
  <depend>tf2</depend>
  <depend>tf2_ros</depend>
  <depend>tf2_geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>visualization_msgs</depend>
  <depend>led_msgs</depend>
  <depend>geographiclib</depend>
  <depend>nodelet</depend>
  <depend>mavros</depend>
  <depend>mavros_extras</depend>
  <depend>cv_camera</depend>
  <depend>cv_bridge</depend>
  <depend>rosbridge_server</depend>
  <depend>web_video_server</depend>
  <depend>tf2_web_republisher</depend>
  <depend>libxml2</depend>
  <depend>libxslt</depend>
  <depend condition="$ROS_PYTHON_VERSION == 2">python-lxml</depend>
  <depend condition="$ROS_PYTHON_VERSION == 3">python3-lxml</depend>
  <depend>dynamic_reconfigure</depend>
  <depend>image_proc</depend>
  <depend>image_geometry</depend>
  <exec_depend>python-pymavlink</exec_depend>
  <test_depend>ros_pytest</test_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <nodelet plugin="${prefix}/nodelet_plugins.xml" />
    <!-- Other tools can request additional information be placed here -->
  </export>
</package>
